Fixed alignment of timeblocks and save button

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,7 @@ body {
   #currentDay {
     font-size: xx-large;
   }
+
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -28,6 +29,7 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
+    text-align: center;
     padding: 10px;
     border-bottom: 1px solid #ccc;
   }
@@ -37,11 +39,13 @@ body {
   }
   
   .event-input {
-    flex: 2;
+    flex: 4;
   }
   
   .save-btn {
-    flex: 1;
+    flex: 0;
+    margin: 10px;
+    align-items: center;
   }
   
   .past {
@@ -49,6 +53,7 @@ body {
   }
   
   /* Past hours are grey, current hour is red, future hours are green. */
+
   .present {
     background-color: #ff6961;
   }
